csComp/includes/css/csStyles.scss
/* ... */
.leaflet-sidebar .close {
    background: transparent;
    font-size: 28px;
    right: 0;
    top: 5px;
}
.leaflet-control-layers label {
    font-weight: normal;
    margin-bottom: 0;
}
.leaflet-control-layers-group-name {
    display: block;
    font-weight: bold;
    margin-bottom: 0.2em;
}
.leaflet-control-layers-group {
    margin-bottom: 0.5em;
}
.leaflet-control-layers-group label {
    padding-left: 0.5em;
}
.table {
    margin-bottom: 0;
}
.nav > li {
    cursor: pointer;
}
.nav-pills > li > a {
    border-radius: 0;
}
.navbar .navbar-brand {
    color: #fff;
    font-size: 25px;
    font-weight: bold;
    margin-left: 10px;
}
.navbar-collapse.in {
    overflow-y: hidden;
}
.typeahead {
    background-color: #fff;
}
.tt-dropdown-menu {
    background-color: #fff;
    border: 1px solid rgba(0, 0, 0, 0.2);
    border-radius: 4px 4px 4px 4px;
    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
    margin-top: 4px;
    max-height: 300px;
    overflow: auto;
    padding: 4px 0;
    width: 100%;
}
.tt-suggestion {
    font-size: 14px;
    line-height: 20px;
    padding: 3px 10px;
}
.tt-suggestion.tt-cursor {
    background-color: #0097cf;
    color: #fff;
    cursor: pointer;
}
.tt-suggestion p {
    margin: 0;
}
.tt-suggestion + .tt-suggestion {
    border-top: 1px solid #ccc;
}
.typeahead-header {
    border-bottom: 2px solid #333;
    margin: 0 5px 5px;
    padding: 3px 0;
}
.has-feedback .form-control-feedback {
    display: block;
    height: 34px;
    line-height: 34px;
    position: absolute;
    right: 0;
    text-align: center;
    top: 0;
    width: 34px;
}
@media (max-width: 992px) {
    .navbar .navbar-brand {
        font-size: 18px;
    }
}
@media (max-width: 767px) {
    .url-break {
        -webkit-hyphens: auto;
        hyphens: auto;
        word-break: break-all;
    }
}
@media print {
    .navbar {
        display: none !important;
    }
    .leaflet-control-container {
        display: none !important;
    }
}
.group-title {
    font-size: 18px;
    font-weight: bold;
    margin-left: 10px;
    margin-top: 15px;
}
.togglebutton {
    cursor: pointer;
}
.toggle-arrow-up {
    display: none;
}
.collapsed .toggle-arrow-up {
    display: block;
}
.toggle-arrow-down {
    display: block;
}
.collapsed .toggle-arrow-down {
    display: none;
}
.select-basestyle {
    cursor: pointer;
    margin-top: 5px;
}
.preview-base-layer {
    float: left;
    height: 50px;
    width: 50px;
}
.menutoggle {
    -moz-transition: all 0.2s ease-out 0s;
    -webkit-transition: all 0.2s ease-out 0s;
    color: white;
    cursor: pointer;
    float: left;
    font-size: 22px;
    height: 50px;
    padding-left: 22px;
    padding-top: 10px;
    transition: all 0.2s ease-out 0s;
    width: 70px;
}
.menutoggle-right {
    -moz-transition: all 0.2s ease-out 0s;
    -webkit-transition: all 0.2s ease-out 0s;
    border-right: 1px solid #eee;
    color: white;
    cursor: pointer;
    float: right;
    font-size: 22px;
    height: 50px;
    padding-left: 15px;
    padding-top: 10px;
    transition: all 0.2s ease-out 0s;
    width: 50px;
}
.leftpanel {
    background: white;

    height: 100%;
    left: 0;
    display: inline-block;
    pointer-events: all;
    top: 0;
    z-index: 100;
}
.dashboard-container {
    width: 100%;
    height: 100%;
    display: inline-block;
}
.leftpanel-container {
    z-index: 100;
    background: white;
    position: absolute;
    left:25px;
    top:85px;
    width: 400px;
    bottom:60px;
    pointer-events: all;
    @include box-shadow(2px,0,10px,rgba(0,0,0,.2));
}
.rightpanel {
    position: absolute;
    width: 100%;
    // max-width: 400px;
    // margin-top: 50px;
    // display: table-cell;
    pointer-events: none;
    right: 0;
    bottom:0;
    top: 0;
    z-index: 2;
}
#rightpanelTabPanes {
    @include box-shadow(-2px,0,10px,rgba(0,0,0,.2));
}
.rightpanel-content {
    display: inline-block;
    width: 100%;
}
.rightpanel .nav {
    margin-left: 2px;
    margin-top: 5px;
}
.navbar {
    /*#B5A3C1*/
    background: $background-dark;
    left: 0;
}

.table-condensed > tbody > tr > td {
    border-bottom: 1px;
    border-bottom-style: groove;
    border-top-style: none;
}
.rightpanel-header {
    color: black;
    font-size: 22px;
    font-weight: bold;
    margin-top: 1px;
    overflow: hidden;
    padding-bottom: 10px;
    padding-right: 36px;
    padding-top: 5px;
    margin-bottom: -10px;
    text-overflow: ellipsis;
    white-space: nowrap;
    width: 100%;
    background:$background-light;
}
.leftpanel-header {
    font-size: 35px;
    font-weight: bold;
    margin-top: 7px;
    padding-bottom: 10px;
    width: 100%;
}
.leftpanel-collapsed .navbar {
    left: 0;
}
.leftpanel-content {
         position: absolute;
    z-index: 0;
    left: 0;
    right: 0;
    top: 60px;
    margin: 0;
    bottom: 0;

}

.leftpanel-tab {
      width: 100%;
    position: absolute;
    z-index: 1;
    border-bottom-style: solid;
    border-bottom-width: thin;
    border-bottom-color: lightgray;
}

/* Header bar should be overwritten by children, so if you increase the border-top height above, you should match it here */
.leftpanel-content > .tab-content {

}
.leftpanel-collapsed .leftpanel-content {
    display: none;
    width: 0;
}
.leftpanel-collapsed .leftpanel {
    display: none;
}
.leftpanel-collapsed .leaflet-container {
    margin-left: 0;
}
.nav-bracket {
    margin-bottom: 30px;
}
.nav-bracket > li > a {
    color: black;
    font-size: 18px;
    padding: 7px 10px;
}
.nav-bracket > li > a:hover,
.nav-bracket > li > a:active,
.nav-bracket > li > a:focus {
    background-color: #649ec9;
    color: #1d2939;
}
.nav-bracket > li.nav-parent > a {
    background: transparent url("../images/plus-white.png") no-repeat 96% center;
}
.nav-bracket > li.nav-parent > a:focus {
    -moz-box-shadow: none;
    -webkit-box-shadow: none;
    box-shadow: none;
    /*background-color: none;*/
    color: #8f939e;
}
/* ... */

